Fixes image layout issues on +B.

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -23,7 +23,7 @@ article {font-size: 14px;}
 
 #copyright { margin-top: 20px; }
 
-
+.single .col.span_9 img { margin: 0px 15px 30px 0px; }
 
 article ul {
     list-style: none !important;
